<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.android.xzwcamera.UI.Camera2TextureView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/texture_view"/>

    <com.android.xzwcamera.UI.FaceView
        android:id="@+id/faceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/close_button_padding"
        android:focusable="true"
        android:src="@drawable/btn_close" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/flash_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:focusable="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/flash"
                android:src="@drawable/icon_flash" />

            <ImageView
                android:id="@+id/filter_mode_switcher"
                style="@style/OneUIMenuButton"
                android:contentDescription="@string/filter_switch"
                android:src="@drawable/icon_filter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:focusable="true" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:id="@+id/count_down"
                style="@style/OneUIMenuButton"
                android:contentDescription="@string/accessibility_count_down"
                android:src="@drawable/icon_countdown"/>

        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <jp.co.cyberagent.android.gpuimage.GPUImageView
            android:id="@+id/gpuimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <SeekBar
            android:id="@+id/tone_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#55ffffff"
            android:max="100"
            android:padding="10dp"
            android:visibility="gone"/>

    </FrameLayout>

    <RadioGroup
        android:id="@+id/module_select_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="175dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:id="@+id/module_select_video"
            android:gravity="center"
            android:button="@null"
            android:text="@string/module_vedio"
            android:paddingLeft="@dimen/doc_type_bar_text_padding"
            android:paddingRight="@dimen/doc_type_bar_text_padding"
            android:textSize="@dimen/doc_type_bar_text_size"
            android:textColor="@color/mode_text_selector"
            android:shadowRadius="@dimen/mode_menu_bar_text_shadow_radius"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:id="@+id/module_select_capture"
            android:checked="true"
            android:gravity="center"
            android:button="@null"
            android:text="@string/module_capture"
            android:paddingLeft="@dimen/doc_type_bar_text_padding"
            android:paddingRight="@dimen/doc_type_bar_text_padding"
            android:textSize="@dimen/doc_type_bar_text_size"
            android:textColor="@color/mode_text_selector"
            android:background="@drawable/mode_select_false"
            android:shadowRadius="@dimen/mode_menu_bar_text_shadow_radius"/>
    </RadioGroup>

    <TextView
        android:id="@+id/count_down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/mode_menu_bar_text"
        android:visibility="gone"
        android:textSize="100dp"
        android:text="10"
        android:textScaleX="1.5"
        android:scaleY="1.5"
        android:layout_centerInParent="true"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="60dp">
    <ImageView
        android:id="@+id/preview_thumb"
        android:layout_marginTop="10dp"
        android:layout_width="@dimen/one_ui_bottom_small"
        android:layout_height="@dimen/one_ui_bottom_small"
        android:focusable="true"
        android:clickable="true"
        android:layout_toStartOf="@+id/shutter_button"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_image_white_boarder"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_photograph_album" />

    <com.android.xzwcamera.UI.ShutterButton
        android:layout_centerInParent="true"
        android:id="@+id/shutter_button"
        android:layout_width="@dimen/one_ui_bottom_large"
        android:layout_height="@dimen/one_ui_bottom_large"
        android:focusable="true"
        android:clickable="true"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_new_shutter" />

    <ImageView
        android:id="@+id/front_back_switcher"
        android:layout_width="@dimen/one_ui_bottom_small"
        android:layout_height="@dimen/one_ui_bottom_small"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/shutter_button"
        android:background="@drawable/bg_image_white_boarder"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_front_back_switcher" />
</RelativeLayout>

</RelativeLayout>